# fb-interface

./: .gitignore  Cargo.toml  README.md  auth.dot  build.sh  build.zsh
.github/workflows/: build.yml  rust.yml
RegisterNumberReq/: Cargo.toml
RegisterNumberReq/src/: inputs_template.rs  main.rs
auth/: api.fbs  auth.fbs  webauthn.fbs
bindings/kt/Auth/API/: VerifyNumberRes.kt
bindings/kt/Auth/KV/: NumberRegistration.kt  VerifiedNumber.kt
bindings/kt/Auth/WebAuthn/: AttestationConveyancePreference.kt  AuthenticatorAttachment.kt  AuthenticatorAttestationResponse.kt  AuthenticatorTransport.kt  CredProtect.kt  CredentialProtectionPolicy.kt  RegisterPublicKeyCredential.kt  User.kt
bindings/rs/src/: gen.rs
bindings/swift/: kv_generated.swift
bindings/ts/: kv_generated.ts
bindings/ts/auth/: verify-number-res.ts  verify-web-authn-req.ts  verify-web-authn-res.ts
bindings/ts/auth/web-authn/: authenticator-attestation-response.ts  credential-protection-policy.ts
examples/: Cargo.toml
examples/src/: auth.rs  inputs_template.rs
rs/: Cargo.toml
rs/src/: gen.rs  lib.rs
schema/auth/: kv.fbs  webauthn.fbs
ts/: api_generated.ts  package.json
ts/auth/: number-registration.ts  register-number-req.ts  register-number-res.ts  verify-number-req.ts  verify-number-res.ts
ts/auth/api/: register-number-req.ts  register-number-res.ts  verify-number-req.ts  verify-number-res.ts
ts/auth/web-authn/: credential-creation-options.ts  relying-party.ts  request-registration-extensions.ts  user.ts
ts/src/: auth_generated.ts  index.ts
ts/src/auth/: verify-number-req.ts
(+7 files in other folders)
