[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
planus = { version = "0.3.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
