[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
planus = { git = "https://github.com/planus-org/planus", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
